Fix Achievements z-index issue

--- a/css/main.css
+++ b/css/main.css
@@ -315,3 +315,18 @@ html {
 .achievement-completed {
     box-shadow: 2px 2px 30px 0px #1edc24;
 }
+
+#achievementWrapper {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    z-index: 5;
+}
+
+#ach {
+    position: absolute;
+    top: 0;
+    right: 0;
+}
